--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -1,17 +1,16 @@
-name: our super workflow
+name: create release asset
 on:
   push:
-    tags:
-      - "v*.*.*"
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: windows-latest
-  
-    steps:
-      - name: checkout repo
-        uses: actions/checkout@v4
 
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+      
       - name: Setup compiler
         run: |
           Invoke-WebRequest -OutFile "compiler.zip" -Uri "https://transfer.informaticon.com/file/public/TZaJsrJTlvDymlaSnCdjGtGdnjVlPED9RTRTaCFldFTyNfzJl4Wau4VtgmZBX51y/pb-compiler_25.0.0.3674.zip?direct=true"
@@ -25,9 +24,16 @@ jobs:
       - name: Create asset
         run: |
           Get-ChildItem -Path ./* -Include "*.pbd","*.exe","*.dll" | Compress-Archive -DestinationPath "design-pattern.zip"
-  
+
+      - name: Increase version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.2
+        with:
+          github_token: ${{ github.token }}
+          default_bump: false
+
       - name: Create release
         uses: softprops/action-gh-release@v2
         with:
           files: "design-pattern.zip"
-          tag_name: ${{ github.ref_name }}
+          tag_name: ${{ steps.tag_version.outputs.new_tag }}
