ci: fix autorelease
Do not try to create a release if github-tag-action did not
decide to create a new tag based on commit history.

--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -35,6 +35,7 @@ jobs:
 
       - name: Create release
         uses: softprops/action-gh-release@v2
+        if: ${{ steps.tag_version.outputs.release_type != '' }}
         with:
           files: "design-pattern.zip"
           tag_name: ${{ steps.tag_version.outputs.new_tag }}
